Make the framework consistent with the ZeroZ DB integration
The integration landed in the code but not in everything that describes or
teaches it, which left the documentation contradicting the examples and both
contradicting the library.

All six example services now use the database rather than the raw storage
manager. inventory-crud - the persistence example, and the one whose two-commit
bug motivated the integration - uses DbCommand and DbQuery, so it demonstrates
code that runs unchanged whether the data is local or on a server. The other
five use write-blocks through localDb(), which is shorter and correct for
examples that run embedded; each says so and points at inventory-crud for the
portable form. Its test no longer mocks a storage manager to assert that two
objects were written in one call: that property is now structural, so the test
reopens the store and checks the thing users actually rely on, which a mock
could never do.

AGENTS.md gains a persistence and transactions section, since agents were being
taught the superseded API. The code samples in GETTING_STARTED, CODE_WALKTHROUGH
and LIVESYNC are updated for the same reason. CHANGELOG records both the rename
and the integration, llms.txt describes persistence as transactional, and the
README's JitPack instructions - which pointed at a repository, an artifact and a
version that no longer exist - are replaced with the real build-and-install path
plus the BOM and archetype coordinates.

Adds RELEASING.md, so both repositories document how a release is cut, pointing
at the family's shared Central process rather than repeating it.

Full build and test suite green.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>